--- a/doc/man/nix-qt.1
+++ b/doc/man/nix-qt.1
@@ -59,7 +59,7 @@ are not affected. (default: 0)
 \fB\-conf=\fR<file>
 .IP
 Specify configuration file. Relative paths will be prefixed by datadir
-location. (default: bitcoin.conf)
+location. (default: nix.conf)
 .HP
 \fB\-daemon\fR
 .IP
@@ -115,7 +115,7 @@ Whether to save the mempool on shutdown and load on restart (default: 1)
 \fB\-pid=\fR<file>
 .IP
 Specify pid file. Relative paths will be prefixed by a net\-specific
-datadir location. (default: bitcoind.pid)
+datadir location. (default: nixd.pid)
 .HP
 \fB\-prune=\fR<n>
 .IP
